prevent stretching of video thumbnail images

--- a/src/app/components/video/video.component.scss
+++ b/src/app/components/video/video.component.scss
@@ -41,7 +41,7 @@
 .video-thumbnail {
     width: 100%;
     height: 100%;
-    transform: rotate(180deg);
+    object-fit: cover;
 }
 
 @media only screen and (min-width: 575px) {
